# brick

./: .gitignore  .gitmodules  CMakeLists.txt
NaiveUIClient/NaiveUIClient/: AppDelegate.h  AppDelegate.m  CoreWrapper.h  CoreWrapper.mm  Info.plist  ViewController.h  ViewController.mm  Window.h  Window.m  main.m
NaiveUIClient/NaiveUIClient.xcodeproj/: project.pbxproj
NaiveUIClient/NaiveUIClient.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
NaiveUIClient/NaiveUIClient.xcodeproj/project.xcworkspace/xcuserdata/tqtifnypmb.xcuserdatad/: UserInterfaceState.xcuserstate
NaiveUIClient/NaiveUIClient.xcodeproj/xcuserdata/tqtifnypmb.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
NaiveUIClient/NaiveUIClient.xcodeproj/xcuserdata/tqtifnypmb.xcuserdatad/xcschemes/: xcschememanagement.plist
NaiveUIClient/NaiveUIClient/Base.lproj/: Main.storyboard
NaiveUIClient/NaiveUIClientTests/: NaiveUIClientTests.m
NaiveUIClient/NaiveUIClientUITests/: NaiveUIClientUITests.m
src/: main.cpp  types.h
src/converter/: CMakeLists.txt  CharTrait.cpp  CharTrait.h  Converter.cpp  Converter.h
src/converter/test/: CMakeLists.txt  test.cpp
src/core/: CMakeLists.txt  Core.cpp  Core.h  main.cpp
src/core/test/: CMakeLists.txt  test.cpp
src/core/test/client/: Client.cpp  Client.h
src/crdt/: CMakeLists.txt  Engine.cpp  Engine.h  Revision.cpp  Revision.h
src/crdt/test/: CMakeLists.txt  test.cpp
src/editor/: CMakeLists.txt  Editor.cpp  Editor.h
src/editor/test/: CMakeLists.txt  test.cpp
src/rope/: CMakeLists.txt  Range.cpp  Range.h  Rope.cpp  Rope.h  RopeIter.cpp  RopeIter.h  RopeNode.cpp  RopeNode.h
src/rope/test/: CMakeLists.txt  test.cpp
src/rpc/: CMakeLists.txt  Request.cpp  Request.h  Rpc.cpp  Rpc.h
src/rpc/test/: CMakeLists.txt  test.cpp
src/rpc/test/testClient/: TestClient.cpp  TestClient.h
src/rpc/test/testServer/: testServer.cpp  testServer.h
src/view/: CMakeLists.txt  View.cpp  View.h
src/view/test/: CMakeLists.txt  test.cpp
